--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Exemplo3</title>
 </head>
 <body>
-
+    <h1>Branch Teste</h1>
     <!-- chamando o javascript externo -->
     <script src="script.js">
     </script>
