--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Branch Teste</h1>
+    <h1>Teste 1</h1>
+    <h1>Teste 2</h1>
     <!-- chamando o javascript externo -->
     <script src="script.js">
     </script>
